--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
     {% include header.html %}
     {% include portfolio_grid.html %}
-    {% include about me.html %}
+    {% include about.html %}
     {% include clients.html %}
     {% include contact.html %}
     {% include footer.html %}
