--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -12,7 +12,7 @@
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     {% if post.link %}
                         <!-- Direct link to external project -->
-                        <a href="{{ post.link }}" target="_blank">
+                        <a href="{{ post.link }}" target="_blank" class="portfolio-link">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content">
                                     <i class="fa fa-plus fa-3x"></i>
