--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Portfolio</h2>
+                <h2 class="section-heading">Projects</h2>
                 <h3 class="section-subheading text-muted">This portfolio is a compilation of notebooks which I created for data analysis or for exploration of machine learning algorithms.</h3>
             </div>
         </div>
