--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -6,7 +6,8 @@
                 <h2 class="section-heading">Projects</h2>
                 <h3 class="section-subheading text-muted">This portfolio is a compilation of notebooks which I created for data analysis or for exploration of machine learning algorithms.</h3>
             </div>
-        </div>
+        </div> <!-- Close row for the headings -->
+        
         <div class="row">
             {% for post in site.posts %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -37,6 +38,6 @@
                     </div>
                 </div>
             {% endfor %}
-        </div>
+        </div> <!-- Close the row for portfolio items -->
     </div>
 </section>
