--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,10 +17,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4 class="subheading">A Global Perspective From the Start</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">I grew up in Tokyo, spending the first 18 years of my life there. I went to international school and completed the IB Program. Along the way, I became fluent in Japanese and Farsi. </p>
                                 </div>
                             </div>
                         </li>
@@ -58,11 +58,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>September 2024</h4>
+                                    <h4 class="subheading">Always Looking for a Challenge</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Think I can create an impact on your organization? Reach out to daana.masumi@gmail.com to connect!</p>
                                 </div>
                             </div>
                         </li>
