--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,8 +16,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">A Global Perspective From the Start</h4>
+                                    <h4>Growing Up in Tokyo</h4>
+                                    <h4 class="subheading">A Global Perspective</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">I grew up in Tokyo, spending the first 18 years of my life there. I went to international school and completed the IB Program. Along the way, I became fluent in Japanese and Farsi. </p>
