--- a/_includes/about.html
+++ b/_includes/about.html
@@ -30,8 +30,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>2017-2022</h4>
+                                    <h4 class="subheading">Building a Strong Technical Foundation</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -44,8 +44,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>2019-2024</h4>
+                                    <h4 class="subheading">Real-World Engineering Experience</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -58,8 +58,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>September 2024</h4>
-                                    <h4 class="subheading">Always Looking for a Challenge</h4>
+                                    <h4>2024</h4>
+                                    <h4 class="subheading">Mastering Data Science</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Think I can create an impact on your organization? Reach out to daana.masumi@gmail.com to connect!</p>
