--- a/_includes/about.html
+++ b/_includes/about.html
@@ -68,9 +68,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>Think I can create an impact
+                                    <br>on your organization?
+                                    <br>Reach out to daana.masumi@gmail.com to connect!</h4>
                             </div>
                         </li>
                     </ul>
