--- a/_includes/about.html
+++ b/_includes/about.html
@@ -34,7 +34,7 @@
                                     <h4 class="subheading">Building a Strong Technical Foundation</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">I graduated with a double major in Electrical Engineering and Physics from Northeastern University. This gave me a strong foundation in problem-solving, analytical thinking, and hands-on technical skills.</p>
                                 </div>
                             </div>
                         </li>
@@ -48,7 +48,7 @@
                                     <h4 class="subheading">Real-World Engineering Experience</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">I’ve gained hands-on engineering experience through a co-op, an internship, and a full-time role as a test engineer, solutions engineer, and hardware engineer. Some of the companies I’ve worked at include Parker Hannifin, Verkada, and Apple.</p>
                                 </div>
                             </div>
                         </li>
