--- a/_includes/about.html
+++ b/_includes/about.html
@@ -62,15 +62,15 @@
                                     <h4 class="subheading">Mastering Data Science</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Think I can create an impact on your organization? Reach out to daana.masumi@gmail.com to connect!</p>
+                                    <p class="text-muted">Until now, I was just collecting data and letting others do the processing, but I realized I want to be the one making meaningful insights from it. That’s why I’m now pursuing a Master's in Data Science at Tufts University. Think I can create an impact on your organization? Reach out to daana.masumi@gmail.com to connect!</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Think I can create an impact
-                                    <br>on your organization?
-                                    <br>Reach out to daana.masumi@gmail.com to connect!</h4>
+                                <h4>More
+                                    <br>To
+                                    <br>Come</h4>
                             </div>
                         </li>
                     </ul>
