--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <!-- Formspree Form -->
+                <!-- Update form action to Formspree URL -->
                 <form action="https://formspree.io/f/xanwzvqp" method="POST">
                     <div class="row">
                         <div class="col-md-6">
