--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,43 +1,24 @@
-<section id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Contact Me</h2>
-                <h3 class="section-subheading text-muted">Think I can create an impact on your organization? Reach out!</h3>
+<form action="https://formspree.io/f/xanwzvqp" method="POST">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="control-group form-group">
+                <input type="text" class="form-control" name="name" placeholder="Your Name *">
+            </div>
+            <div class="control-group form-group">
+                <input type="email" class="form-control" name="email" placeholder="Your Email *">
+            </div>
+            <div class="control-group form-group">
+                <input type="tel" class="form-control" name="phone" placeholder="Your Phone *">
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <!-- Update form action to Formspree URL -->
-                <form action="https://formspree.io/f/xanwzvqp" method="POST">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="control-group form-group">
-                                <input type="text" class="form-control" name="name" placeholder="Your Name *" required>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group form-group">
-                                <input type="email" class="form-control" name="email" placeholder="Your Email *" required>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group form-group">
-                                <input type="tel" class="form-control" name="phone" placeholder="Your Phone *" required>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="control-group form-group">
-                                <textarea class="form-control" name="message" placeholder="Your Message *" required></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-lg-12 text-center">
-                            <button type="submit" class="btn btn-xl">Send Message</button>
-                        </div>
-                    </div>
-                </form>
+        <div class="col-md-6">
+            <div class="control-group form-group">
+                <textarea class="form-control" name="message" placeholder="Your Message *"></textarea>
             </div>
+        </div>
+        <div class="clearfix"></div>
+        <div class="col-lg-12 text-center">
+            <button type="submit" class="btn btn-xl">Send Message</button>
         </div>
     </div>
-</section>
+</form>
