--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To My Portfolio!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#portfolio" class="page-scroll btn btn-xl">See Projects</a>
+                <a href="#portfolio" class="page-scroll btn btn-xl">View My Projects</a>
             </div>
         </div>
     </header>
